--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 python-dotenv==0.21.0
 langchain-core==0.3.76
 langgraph==0.3.30
-langchain-google-genai==2.1.10
+langchain-google-genai==2.0.5
 langchain-community==0.3.20
-pandas==2.0.0
+pandas==2.2.2
+numpy==1.26.4
 pdfplumber==0.11.7
 streamlit==1.49.1
